Port over website

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,21 @@
-<p>home works!</p>
+<div class="container background">
+  <div class="infobox">
+    <div class="title">Rasmus Buchholdt</div>
+    <div class="title description">Full-stack developer, currently studying Computer Science at Aalborg University.
+    </div>
+    <div class="social-icons">
+      <a href="https://github.com/RasmusBuchholdt" target="_blank">
+        <img id="github" src="assets/images/github.svg" class="icon">
+      </a>
+      <a href="https://openomic.dk" target="_blank">
+        <img id="github" src="assets/images/openomic.svg" class="icon">
+      </a>
+      <a href="https://www.linkedin.com/in/rasmusbuchholdt/" target="_blank">
+        <img id="linkedin" src="assets/images/linkedin.svg" class="icon">
+      </a>
+      <a href="mailto:rasmus@buchholdt.dev" target="_blank">
+        <img id=" email " src="assets/images/email.svg " class="icon ">
+      </a>
+    </div>
+  </div>
+</div>
